[package]
name = "grim-save-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.4"

hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.2", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0"
